WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149589
REGRESSION(
r190214
): Assertion failure in EventContext's constructor when hovering over any input element
https://bugs.webkit.org/show_bug.cgi?id=149589
Summary
REGRESSION(r190214): Assertion failure in EventContext's constructor when hov...
Michael Catanzaro
Reported
2015-09-27 19:49:13 PDT
Created
attachment 261997
[details]
backtrace I get this assertion: ASSERTION FAILED: !isUnreachableNode(m_target.get()) ../../Source/WebCore/dom/EventContext.cpp(43) : WebCore::EventContext::EventContext(PassRefPtr<WebCore::Node>, PassRefPtr<WebCore::EventTarget>, PassRefPtr<WebCore::EventTarget>) When I click on any input element (such as the text entry on this Bugzilla page). It's a quite recent regression, so I'm suspicious of
r190153
and
r190214
, which recently modified this code (CC: Ryosuke).
Attachments
backtrace
(92.60 KB, text/plain)
2015-09-27 19:49 PDT
,
Michael Catanzaro
no flags
Details
Fixes the bug
(1.40 KB, patch)
2015-09-29 20:18 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-09-29 00:43:58 PDT
Is this still happening after
http://trac.webkit.org/changeset/190288
?
Michael Catanzaro
Comment 2
2015-09-29 11:22:06 PDT
Correction: the crash doesn't require the element to be focused. It occurs on hover, not on focus. (In reply to
comment #1
)
> Is this still happening after
http://trac.webkit.org/changeset/190288
?
Yes, unfortunately.
Ryosuke Niwa
Comment 3
2015-09-29 20:18:39 PDT
Created
attachment 262136
[details]
Fixes the bug
WebKit Commit Bot
Comment 4
2015-09-29 22:56:09 PDT
Comment on
attachment 262136
[details]
Fixes the bug Clearing flags on attachment: 262136 Committed
r190340
: <
http://trac.webkit.org/changeset/190340
>
WebKit Commit Bot
Comment 5
2015-09-29 22:56:15 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 6
2015-09-30 06:08:57 PDT
Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug