ASSERTION FAILED: !isUnreachableNode(m_target.get()) when hovering over any input element https://bugs.webkit.org/show_bug.cgi?id=149589

Reviewed by Darin Adler.

The bug was caused by target not being reset across shadow boundary when SHADOW_DOM was disabled.

No new tests since exiting tests cover this in debug builds. e.g. editing/deleting/5290534.html

* dom/EventDispatcher.cpp:
(WebCore::EventPath::EventPath):


Canonical link: https://commits.webkit.org/167757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190340 268f45cc-cd09-0410-ab3c-d52691b4dbfc